[project]
name = "agent-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "maanas1234", email = "maanastyagi2006@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
agent-harness = "agent_harness:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
